<resources>
    <string name="app_name">ABVGIETCONNECT</string>
    <string name="about_abvgiet">Atal Bihari Vajpayee Government Institute of Engineering  Technology was established in 10 april 2011. It is the Second State Government institute of Himachal Pradesh which is located at Pragatinagar Village Gumma Kotkhai Distt Shimla on the bank of river Giri Ganga about 60 km from Shimla on Shimla Rohru National Highway. Presently three disciplines has been running under the same roof i.e B.Tech., Polytechnic and I.T.I. B.Tech presently running two courses i.e Computer Science  Engineering and Electronics  Communication Engineering each with the intake of 63 students. Polytechnic presently offers three courses i.e Computer Engineering , Electronics  Communication Engg. and Electrical Engg. each with the intake of 40 students. I.T.I is presently running four courses i.e Electrical, Electronics, Fitter and Motor Vehicle Mechanic each with the intake of 21 students. The Government of Himachal Pradesh has notified to establish Atal Bihari Vajpayee Government Institute of Engineering  Technology Pragatinagar vide Notification No. EDN (TE) A (6)-1/2009 dated 14.03.2011.The foundation stone of the Institute was laid by Hon\'ble Chief Minister of Himachal Pradesh on 10th April 2011. This Institution is located at Pragatinagar on the bank of river Giri Ganga about 61 km from Shimla on Shimla Rohru National Highway. On the other bank of the river Cricket Stadium is situated. The campus is spread over 123.4 Bighas of lush green land  surrounded by beautiful green Apple Valley. The environment is most suitable for teaching, learning process. Under this Institute B.Tech programme, Diploma programme and Certificate programme has been proposed. Three programmes namely Electrical Engineering, Electronics  Communication Engineering and Computer Engineering with the intake of 40 students in each trade in Polytechnic is running from the session 2011-12 and I.T.I. with the intake of 21 students in each trade of Electrician, Electronics and Fitter Trade is running under NCVT Scheme. The NCVT has approved these programmes on dated: 25/9/2012. One more programme in Mechanic motor vehicle has been started from the session 2012-13 under SCVT. The B.Tech (Degree programme) has been started with two disciplines namely Electronics  Communication Engineering and Computer Science  Engineering with the intake of 40 students in each trade from session 2012-13 as constituent college of HP Technical University Hamirpur.

A.B.V.G.I.E.T Pragatinagar offers you an opportunity to dedicate yourself as a qualified professional to the development of the nation and alleviation of sufferings of humanity. Our main objective is to teach, train and prepare the students to a level where they can handle any situation independently to achieve higher degree of excellence in professionalism. The Institute has a well qualified, experienced and dedicated faculty. The highly pragmatic and progressive environment developed by the talented faculty is conducive for the development of learning, empowerment of knowledge and skill enhancement</string>

    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="booki">BookI</string>
    <string name="welcome_back">Student Zone</string>
    <string name="read_it_together">Come here to explore more..</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password.?</string>

    <string name="prinicpal_message">Atal Bihari Vajpayee Government Institute of Engineering and Technology (ABVGIET), Pragtinagar, Shimla (H.P) was established on 10th April,2011 with the aim of providing quality higher education on par with international standards.Empowerment of students for their all round development through education is our cherished motto. Today education means much more than merely acquiring knowledge. It is acquisition of knowledge and skills, building character and improving employability of our young talent, the future leadership. I am sure, being stars and their painstakingly and gainfully developed ABVGIET Culture, we inherited a strong foundation to march ahead and achieve the within mentioned education objectives for a stronger and brighter India. Measures initiated by the Hon. Management, steps taken by the college administration, the willing contribution of the teaching and non-teaching staff and over whelming response and enthusiastic participation of my dear students in the college activates in the recent past all vouch for this. When all the constituents come together and work in unison, the expected results are bound to flow. I wish all the best.</string>


    <string name="Main_page_selected"> %s page is selected</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>